crates/elenchus-parser/tests/snapshots/errors__rule_body_not_an_implication.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        RULE r:\n            EXCLUSIVE\n                x a\n                x b\n        \"#)"
---
RESULT: 1 syntax error

WHEN  (1 problem)
  syntax  : WHEN <literal>   (literal = [NOT] <Subject> <predicate> [<object>])
  example : WHEN motor over_100
    line 3, col 1 - a rule body must be WHEN ... THEN
      |             EXCLUSIVE
      | ^^^^^^^^^^^^^^^^^^^^^
